# georgia-ev-finetune

./: .gitignore  Chat 1.txt  Chat 2.txt  Human validated questions.xlsx  README.md  SESSION_LOG.md  SESSION_LOG_14B.md  SESSION_LOG_V4.md  gnem_finetuning_experiment_plan.md  kb_full.jsonl
self_supervised_finetuning/: .gitignore  README.md  pyproject.toml  requirements.txt
self_supervised_finetuning/benchmarks/gnem_bench_v1/: RESULTS_v1.md  benchmark_card.md  questions_gold_v1.json  web_questions_v1.json
self_supervised_finetuning/configs/data/: cleaned_web_only.yaml  kb_only_company_split.yaml  kb_only_memorization.yaml  kb_web_mixed.yaml  kb_web_mixed_full_corpus.yaml  kb_web_mixed_token_balanced.yaml  raw_web_only.yaml  structured_kb_only.yaml  web_only_source_split.yaml
self_supervised_finetuning/docs/: PLAN_kb_web_mixed_experiment.md
self_supervised_finetuning/reports/: course_project_paper.md  thesis_paper.md
self_supervised_finetuning/scripts/: 00_inspect_environment.sh  01_prepare_kb_dataset.sh  02_train_kb_company_split.sh  03_train_kb_memorization.sh  04_eval_adapter.sh  05_compare_base_vs_adapter.sh  06_run_sweep.sh  07_run_multi_model_kb_sweep.sh  08_run_multi_dataset_sweep.sh  ask_adapter.py  build_context_vs_parametric_report.py  build_gold.py  build_web_questions.py  convert_web_corpus.py  ingest_kb_gold.py  parametric_to_records.py  report_mixture_stats.py
self_supervised_finetuning/tests/: test_group_splits.py  test_kb_loading.py  test_lora_config.py  test_no_qa_format.py  test_run_naming.py  test_sweep_expansion.py  test_text_formatting.py
(+159 files in other folders)
