[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ssft"
version = "0.1.0"
description = "Self-supervised continued-pretraining / domain-adaptive LoRA fine-tuning experiment framework for the Georgia EV supply-chain KB."
requires-python = ">=3.10"
readme = "README.md"

[tool.setuptools.packages.find]
where = ["src"]
include = ["ssft*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
